Add panel desktop Appium diagnostics